Fixed form overflow on small devices, grid refactoring on breakpoints & fixed center aligned images on small deviices.

--- a/web/themes/imalabya/src/scss/base/layout/_footer.scss
+++ b/web/themes/imalabya/src/scss/base/layout/_footer.scss
@@ -20,8 +20,10 @@
   }
   p {
     margin-bottom: $space;
+    text-align: center;
     @media screen and (min-width: $screen-sm) {
       margin: 0;
+      text-align: left;
     }
   }
   p > svg {
