--- a/web/themes/imalabya/src/scss/component/prevnext.scss
+++ b/web/themes/imalabya/src/scss/component/prevnext.scss
@@ -15,9 +15,6 @@
     @media screen and (min-width: $screen-sm) {
       text-align: right;
 
-      grid-column: 4 / span 3;
-    }
-    @media screen and (min-width: $screen-lg) {
       grid-column: 7 / span 6;
     }
     &:first-child {
@@ -25,9 +22,6 @@
 
       grid-column: 1 / -1;
       @media screen and (min-width: $screen-sm) {
-        grid-column: 1 / span 3;
-      }
-      @media screen and (min-width: $screen-lg) {
         grid-column: 1 / span 6;
       }
     }
