--- a/web/themes/imalabya/src/scss/settings/_mixin.scss
+++ b/web/themes/imalabya/src/scss/settings/_mixin.scss
@@ -34,7 +34,7 @@
 
   grid-gap: $space-m;
   grid-template-columns: repeat(6, minmax(0, 1fr));
-  @media screen and (min-width: $screen-lg) {
+  @media screen and (min-width: $screen-sm) {
     grid-column-gap: $space-l;
     grid-template-columns: repeat(12, minmax(0, 1fr));
   }
@@ -42,7 +42,7 @@
 @mixin grid-content() {
   grid-column: 1 / 7;
   @media screen and (min-width: $screen-sm) {
-    grid-column: 1 / 9;
+    grid-column: 1 / 12;
   }
   @media screen and (min-width: $screen-lg) {
     grid-column: 1 / 10;
@@ -57,9 +57,12 @@
   text-transform: uppercase;
   color: $color-primary;
   border: 0.125rem solid $color-primary;
+  border-radius: 0;
   background: $color-white;
   font-size: $font-size--s;
   font-weight: $font-weight--medium;
+
+  -webkit-appearance: none;
   &:hover {
     cursor: pointer;
     background: $color-link--hover-bg;
